--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,4 +9,44 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <servlet>
+    <description></description>
+    <display-name>UnameCheck</display-name>
+    <servlet-name>UnameCheck</servlet-name>
+    <servlet-class>cn.zzl.servlet.UnameCheck</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>UnameCheck</servlet-name>
+    <url-pattern>/unameCheck.action</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>UserLogin</display-name>
+    <servlet-name>UserLogin</servlet-name>
+    <servlet-class>cn.zzl.servlet.UserLogin</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>UserLogin</servlet-name>
+    <url-pattern>/login.action</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>userEmialCheck</display-name>
+    <servlet-name>userEmialCheck</servlet-name>
+    <servlet-class>cn.zzl.servlet.userEmialCheck</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>userEmialCheck</servlet-name>
+    <url-pattern>/emailCheck.action</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>userPhoneCheck</display-name>
+    <servlet-name>userPhoneCheck</servlet-name>
+    <servlet-class>cn.zzl.servlet.userPhoneCheck</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>userPhoneCheck</servlet-name>
+    <url-pattern>/phoneCheck.action</url-pattern>
+  </servlet-mapping>
 </web-app>
