第四天,实现购物车的展示和商品数量增减
实现商品数量增加和减少

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -59,4 +59,14 @@
     <servlet-name>userRegister</servlet-name>
     <url-pattern>/userRegister.action</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>cartUpdata</display-name>
+    <servlet-name>cartUpdata</servlet-name>
+    <servlet-class>cn.zzl.servlet.cartUpdata</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>cartUpdata</servlet-name>
+    <url-pattern>/cartUpdata</url-pattern>
+  </servlet-mapping>
 </web-app>
